--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: generic
 dist: xenial
 before_install:
-  - openssl aes-256-cbc -K $encrypted_4c2ca4326cdc_key -iv $encrypted_4c2ca4326cdc_iv -in signing.key.enc -out signing.key -d
+  - bash prepare.sh
 script:
   - bash updrepo.sh $TRAVIS_REPO_SLUG
 before_deploy:
