--- a/x86_64/extra/PKGBUILD
+++ b/x86_64/extra/PKGBUILD
@@ -3,12 +3,14 @@
 
 pkgname=xscreensaver
 pkgver=5.44
-pkgrel=1
+pkgrel=2
 pkgdesc='Screen saver and locker for the X Window System'
 url='https://www.jwz.org/xscreensaver/'
 arch=('x86_64')
 license=('BSD')
-depends=('libglade' 'libxmu' 'glu' 'xorg-appres' 'perl-libwww')
+depends=('libglade' 'libxmu' 'glu' 'xorg-appres' 'perl-libwww'
+         'libxcrypt' 'libcrypt.so' 'libxi' 'libxxf86vm' 'libxrandr' 'libxinerama'
+         'libxt' 'libx11' 'libxext' 'pam' 'glibc')
 makedepends=('bc' 'intltool' 'libxpm' 'gdm')
 optdepends=('gdm: for login manager support')
 backup=('etc/pam.d/xscreensaver')
