--- a/.github/actions/updrepo/action.yml
+++ b/.github/actions/updrepo/action.yml
@@ -2,5 +2,5 @@ name: Update and sign index
 description: Update and sign index
 runs:
   steps:
-    - run $GITHUB_ACTIONS_PATH/action.sh
+    - run: $GITHUB_ACTIONS_PATH/action.sh
       shell: bash
