--- a/.github/workflows/updrepo.yml
+++ b/.github/workflows/updrepo.yml
@@ -31,6 +31,7 @@ jobs:
     name: Sign repository index
     runs-on: ubuntu-latest
     needs: updrepo
+    continue-on-error: true
     steps:
       - run: mkdir -p $HOME/.gnupg
       - run: openssl aes-256-cbc -d -K ${{secrets.key}} -iv ${{secrets.iv}} -in $KEY_FILE | gpg --import
