--- a/.github/workflows/updrepo.yml
+++ b/.github/workflows/updrepo.yml
@@ -25,25 +25,12 @@ jobs:
       - uses: actions/checkout@v2
         with:
           ref: master
+
       - uses: ./.github/actions/updrepo
 
-  sign:
-    name: Sign repository index
-    runs-on: ubuntu-latest
-    needs: updrepo
-    continue-on-error: true
-    steps:
-      - run: mkdir -p $HOME/.gnupg
-      - run: openssl aes-256-cbc -d -K ${{secrets.key}} -iv ${{secrets.iv}} -in $KEY_FILE | gpg --import
-      - run: gpg --detach-sign --use-agent --no-armor repo/$REPO_NAME.db
-      - run: gpg --detach-sign --use-agent --no-armor repo/$REPO_NAME.files
+      - uses: ./.github/actions/signrepo
+        continue-on-error: true
 
-  deploy:
-    name: Deploy repository index
-    needs: [updrepo, sign]
-    runs-on: ubuntu-latest
-    if: needs.updrepo.result == 'success'
-    steps:
       - uses: svenstaro/upload-release-action@2.2.0
         with:
           repo_token: ${{secrets.GITHUB_TOKEN}}
