--- a/.github/actions/updrepo/action.yml
+++ b/.github/actions/updrepo/action.yml
@@ -3,5 +3,5 @@ description: Update and sign index
 runs:
   using: composite
   steps:
-    - run: $GITHUB_ACTION_PATH/action.sh
+    - run: ${{github.action_path}}/action.sh
       shell: bash
