--- a/.github/workflows/updrepo.yml
+++ b/.github/workflows/updrepo.yml
@@ -38,7 +38,7 @@ jobs:
       - uses: actions/github-script@v3.1.0
         with:
           script: |
-            const rel = yield octokit.repos.getReleaseByTag(Object.assign(Object.assign({}, {'owner': 'djpohly', 'repo': 'PKGBUILD'}), {tag: 'repository'}));
+            const rel = yield octokit.repos.getReleaseByTag(Object.assign(Object.assign({}, {'owner': 'djpohly', 'repo': 'PKGBUILD'}), {tag: 'repository'}))
             return rel
 
       - uses: svenstaro/upload-release-action@2.2.0
