--- a/.github/workflows/updrepo.yml
+++ b/.github/workflows/updrepo.yml
@@ -37,8 +37,9 @@ jobs:
 
       - uses: actions/github-script@v3.1.0
         with:
+          github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
-            const rel = yield octokit.repos.getReleaseByTag(Object.assign(Object.assign({}, {'owner': 'djpohly', 'repo': 'PKGBUILD'}), {tag: 'repository'}))
+            const rel = yield github.repos.getReleaseByTag(Object.assign(Object.assign({}, {'owner': 'djpohly', 'repo': 'PKGBUILD'}), {tag: 'repository'}))
             return rel
 
       - uses: svenstaro/upload-release-action@2.2.0
