--- a/.github/workflows/updrepo.yml
+++ b/.github/workflows/updrepo.yml
@@ -35,15 +35,7 @@ jobs:
           signingkey: ${{env.KEY_FILE}}
         continue-on-error: true
 
-      - uses: actions/github-script@v3.1.0
-        with:
-          github-token: ${{secrets.GITHUB_TOKEN}}
-          script: |
-            const rel = await github.repos.getReleaseByTag({owner: 'djpohly', repo: 'PKGBUILD', tag: 'repository'})
-            const assets = await github.paginate(github.repos.listReleaseAssets, {owner: 'djpohly', repo: 'PKGBUILD', release_id: rel.data.id})
-            console.log(assets)
-
-      - uses: svenstaro/upload-release-action@2.2.0
+      - uses: djpohly/upload-release-action@master
         with:
           repo_token: ${{secrets.GITHUB_TOKEN}}
           tag: ${{env.RELEASE_NAME}}
