--- a/.github/workflows/updrepo.yml
+++ b/.github/workflows/updrepo.yml
@@ -30,9 +30,9 @@ jobs:
 
       - uses: ./.github/actions/signrepo
         with:
-          key: ${{secrets.key}}
-          iv: ${{secrets.iv}}
-          signingkey: ${{env.KEY_FILE}}
+          encryption_key: ${{secrets.encryption_key}}
+          encryption_iv: ${{secrets.encryption_iv}}
+          keyfile: ${{env.KEY_FILE}}
         continue-on-error: true
 
       - uses: djpohly/upload-release-action@master
