--- a/.github/workflows/updrepo.yml
+++ b/.github/workflows/updrepo.yml
@@ -35,7 +35,7 @@ jobs:
           keyfile: ${{env.KEY_FILE}}
         continue-on-error: true
 
-      - uses: djpohly/upload-release-action@master
+      - uses: djpohly/upload-release-action@paginate-assets
         with:
           repo_token: ${{secrets.GITHUB_TOKEN}}
           tag: ${{env.RELEASE_NAME}}
