use PUSH_TOKEN so commit triggers repo workflow

--- a/.github/actions/commitpkg/action.yml
+++ b/.github/actions/commitpkg/action.yml
@@ -3,5 +3,5 @@ description: Commit package metadata
 runs:
   using: composite
   steps:
-    - run: ${{github.action_path}}/action.sh ${{github.token}}
+    - run: ${{github.action_path}}/action.sh ${{secrets.PUSH_TOKEN}}
       shell: bash
