pass PUSH_TOKEN to commitpkg

--- a/.github/workflows/pkgbuild.yml
+++ b/.github/workflows/pkgbuild.yml
@@ -52,3 +52,5 @@ jobs:
           overwrite: true
 
       - uses: ./master/.github/actions/commitpkg
+        with:
+          repo_token: ${{secrets.PUSH_TOKEN}}
