Revert "disable repository_dispatch for testing"
This reverts commit a2c8faba8a7cfdf96c5e71c1fb620cd5ba1c3d21.

--- a/.github/workflows/updrepo.yml
+++ b/.github/workflows/updrepo.yml
@@ -15,8 +15,8 @@ on:
       - 'files/**'
   # Allow manual and programmatic trigger as well
   workflow_dispatch:
-  # repository_dispatch:
-  #   types: [rebuild]
+  repository_dispatch:
+    types: [rebuild]
 
 defaults:
   run:
